init eclipse env files

--- a/source/java/.project
+++ b/source/java/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>Hibernate ORM Extension</name>
+	<name>Extension-Hibernate</name>
 	<comment></comment>
 	<projects>
 	</projects>
