--- a/source/java/.classpath
+++ b/source/java/.classpath
@@ -11,107 +11,7 @@
 	<classpathentry kind="lib" path="libs/jta-1-1-0.jar"/>
 	<classpathentry kind="lib" path="libs/slf4j-api-1-6-4.jar"/>
 	<classpathentry kind="lib" path="libs/slf4j-nop-1-6-4.jar"/>
-	<classpathentry kind="lib" path="/Railo-Libs/apache-lucene-2-4-1.jar"/>
-	<classpathentry kind="lib" path="/Railo-Libs/apache-lucene-analyzers-2-4-1.jar"/>
-	<classpathentry kind="lib" path="/Railo-Libs/apache-lucene-highlighter-2-4-1.jar"/>
-	<classpathentry kind="lib" path="/Railo-Libs/apache-lucene-misc-2-4-1.jar"/>
-	<classpathentry kind="lib" path="/Railo-Libs/apache-lucene-similarity-2-4-1.jar"/>
-	<classpathentry kind="lib" path="/Railo-Libs/apache-lucene-snowball-2-4-1.jar"/>
-	<classpathentry kind="lib" path="/Railo-Libs/apache-lucene-spellchecker-2-4-1.jar"/>
-	<classpathentry kind="lib" path="/Railo-Libs/apache-poi-3-8-0.jar"/>
-	<classpathentry kind="lib" path="/Railo-Libs/apache-poi-ooxml-3-8-0.jar"/>
-	<classpathentry kind="lib" path="/Railo-Libs/apache-poi-ooxml-schemas-3-8-0.jar"/>
-	<classpathentry kind="lib" path="/Railo-Libs/apache-poi-tm-extractors-3-8-0.jar"/>
-	<classpathentry kind="lib" path="/Railo-Libs/apache-ws-axis-1-4-0.jar"/>
-	<classpathentry kind="lib" path="/Railo-Libs/apache-ws-axis-ant-1-4-0.jar"/>
-	<classpathentry kind="lib" path="/Railo-Libs/apache-xml-xalan-2-7-1.jar"/>
-	<classpathentry kind="lib" path="/Railo-Libs/apache-xml-xerces-2-11-0.jar"/>
-	<classpathentry kind="lib" path="/Railo-Libs/backport-util-concurrent-2-2-0.jar"/>
-	<classpathentry kind="lib" path="/Railo-Libs/bcprov-jdk14-1-36-0.jar"/>
-	<classpathentry kind="lib" path="/Railo-Libs/com-mysql-jdbc-5-1-20.jar"/>
-	<classpathentry kind="lib" path="/Railo-Libs/com-naryx-tagfusion-cfx-1-0-0.jar"/>
-	<classpathentry kind="lib" path="/Railo-Libs/concurrent-1-3-3.jar"/>
-	<classpathentry kind="lib" path="/Railo-Libs/ehcache-2-5-2.jar"/>
-	<classpathentry kind="lib" path="/Railo-Libs/ESAPI-2-0-1.jar"/>
-	<classpathentry kind="lib" path="/Railo-Libs/flex-messaging-common-3-3-0-22497.jar"/>
-	<classpathentry kind="lib" path="/Railo-Libs/flex-messaging-core-3-3-0-22497.jar"/>
-	<classpathentry kind="lib" path="/Railo-Libs/flex-messaging-opt-3-3-0-22497.jar"/>
-	<classpathentry kind="lib" path="/Railo-Libs/flex-messaging-proxy-3-3-0-22497.jar"/>
-	<classpathentry kind="lib" path="/Railo-Libs/flex-messaging-remoting-3-3-0-22497.jar"/>
-	<classpathentry kind="lib" path="/Railo-Libs/fonts-1-0-0.jar"/>
-	<classpathentry kind="lib" path="/Railo-Libs/fusiondebug-api-server-1-0-20.jar"/>
-	<classpathentry kind="lib" path="/Railo-Libs/hypersonic-hsqldb-2-7-1.jar"/>
-	<classpathentry kind="lib" path="/Railo-Libs/icepdf-core-3-1-0.jar"/>
-	<classpathentry kind="lib" path="/Railo-Libs/jacob-1-16-1.jar"/>
-	<classpathentry kind="lib" path="/Railo-Libs/javaparser-1-0-8.jar"/>
-	<classpathentry kind="lib" path="/Railo-Libs/javasysmon-0-3-3.jar"/>
-	<classpathentry kind="lib" path="/Railo-Libs/javax.servlet.jar"/>
-	<classpathentry kind="lib" path="/Railo-Libs/jcifs-1.3.17.jar"/>
-	<classpathentry kind="lib" path="/Railo-Libs/jcommon-1-0-10.jar"/>
-	<classpathentry kind="lib" path="/Railo-Libs/jencrypt-1-4-2-04.jar"/>
-	<classpathentry kind="lib" path="/Railo-Libs/jffmpeg-1-4-2-09.jar"/>
-	<classpathentry kind="lib" path="/Railo-Libs/jfreechart-1-0-12.jar"/>
-	<classpathentry kind="lib" path="/Railo-Libs/jfreechart-patch-1-0-12.jar"/>
-	<classpathentry kind="lib" path="/Railo-Libs/jmimemagic-0-1-2.jar"/>
-	<classpathentry kind="lib" path="/Railo-Libs/jpedal-gpl-3-51-12.jar"/>
-	<classpathentry kind="lib" path="/Railo-Libs/jtds-1-2-5.jar"/>
-	<classpathentry kind="lib" path="/Railo-Libs/junit-3-8-1.jar"/>
-	<classpathentry kind="lib" path="/Railo-Libs/log4j-1-2-16.jar"/>
-	<classpathentry kind="lib" path="/Railo-Libs/lowagie-itext-2-1-2-1.jar"/>
-	<classpathentry kind="lib" path="/Railo-Libs/metadata-extractor-2-4-0-1.jar"/>
-	<classpathentry kind="lib" path="/Railo-Libs/microsoft-mssqlserver-4-0-0.jar"/>
-	<classpathentry kind="lib" path="/Railo-Libs/microsoft-sqljdbc-4-0-0.jar"/>
-	<classpathentry kind="lib" path="/Railo-Libs/ojdbc14-0-0-0.jar"/>
-	<classpathentry kind="lib" path="/Railo-Libs/openamf-1-5-8.jar"/>
-	<classpathentry kind="lib" path="/Railo-Libs/openamf-astranslator-1-5-8.jar"/>
-	<classpathentry kind="lib" path="/Railo-Libs/org-apache-commons-codec-1-6-0.jar"/>
-	<classpathentry kind="lib" path="/Railo-Libs/org-apache-commons-collections-3-2-1.jar"/>
-	<classpathentry kind="lib" path="/Railo-Libs/org-apache-commons-compress-1-3-0.jar"/>
-	<classpathentry kind="lib" path="/Railo-Libs/org-apache-commons-discovery-0-4-0.jar"/>
-	<classpathentry kind="lib" path="/Railo-Libs/org-apache-commons-email-1-2-0.jar"/>
-	<classpathentry kind="lib" path="/Railo-Libs/org-apache-commons-fileupload-1-2-1.jar"/>
-	<classpathentry kind="lib" path="/Railo-Libs/org-apache-commons-httpclient-3-0-1.jar"/>
-	<classpathentry kind="lib" path="/Railo-Libs/org-apache-commons-httpclient-4-1-3.jar"/>
-	<classpathentry kind="lib" path="/Railo-Libs/org-apache-commons-httpcore-4-1-4.jar"/>
-	<classpathentry kind="lib" path="/Railo-Libs/org-apache-commons-httpmime-4-1-3.jar"/>
-	<classpathentry kind="lib" path="/Railo-Libs/org-apache-commons-io-2-1-0.jar"/>
-	<classpathentry kind="lib" path="/Railo-Libs/org-apache-commons-lang-2-6-0.jar"/>
-	<classpathentry kind="lib" path="/Railo-Libs/org-apache-commons-logging-1-1-1.jar"/>
-	<classpathentry kind="lib" path="/Railo-Libs/org-apache-commons-logging-adapters-1-1-1.jar"/>
-	<classpathentry kind="lib" path="/Railo-Libs/org-apache-commons-logging-api-1-1-1.jar"/>
-	<classpathentry kind="lib" path="/Railo-Libs/org-apache-commons-net-3-1-0.jar"/>
+	<classpathentry kind="lib" path="libs/ehcache-2-5-2.jar"/>
 	<classpathentry kind="lib" path="/Railo-Libs/org-apache-felix-main-4-2-1.jar"/>
-	<classpathentry kind="lib" path="/Railo-Libs/org-apache-oro-2-0-8.jar"/>
-	<classpathentry kind="lib" path="/Railo-Libs/org-apache-sanselan-0-97-0-incubator.jar"/>
-	<classpathentry kind="lib" path="/Railo-Libs/org-h2-1-3-172.jar"/>
-	<classpathentry kind="lib" path="/Railo-Libs/org-joda-time-2-1-0.jar"/>
-	<classpathentry kind="lib" path="/Railo-Libs/org-objectweb-asm-all-4-0-0.jar"/>
-	<classpathentry kind="lib" path="/Railo-Libs/PDFBox-0-7-3.jar"/>
-	<classpathentry kind="lib" path="/Railo-Libs/PDFRenderer-1-0-5.jar"/>
-	<classpathentry kind="lib" path="/Railo-Libs/postgresql-9-1-902.jar"/>
-	<classpathentry kind="lib" path="/Railo-Libs/resolver-1-2-0.jar"/>
-	<classpathentry kind="lib" path="/Railo-Libs/serializer-2-7-1.jar"/>
-	<classpathentry kind="lib" path="/Railo-Libs/slf4j-api-1-6-4.jar"/>
-	<classpathentry kind="lib" path="/Railo-Libs/slf4j-nop-1-6-4.jar"/>
-	<classpathentry kind="lib" path="/Railo-Libs/ss-css2-0-9-4.jar"/>
-	<classpathentry kind="lib" path="/Railo-Libs/stax-api-1-0-1.jar"/>
-	<classpathentry kind="lib" path="/Railo-Libs/sun-activation-1-1-0.jar"/>
-	<classpathentry kind="lib" path="/Railo-Libs/sun-jai-codec-1-1-2.jar"/>
-	<classpathentry kind="lib" path="/Railo-Libs/sun-jai-core-1-2-1.jar"/>
-	<classpathentry kind="lib" path="/Railo-Libs/sun-jndi-ldap-1-2-4.jar"/>
-	<classpathentry kind="lib" path="/Railo-Libs/sun-jndi-ldapbp-1-2-4.jar"/>
-	<classpathentry kind="lib" path="/Railo-Libs/sun-jndi-ldapsec-1-2-4.jar"/>
-	<classpathentry kind="lib" path="/Railo-Libs/sun-jndi-providerutil-1-2-4.jar"/>
-	<classpathentry kind="lib" path="/Railo-Libs/sun-mail-1-3-3-01.jar"/>
-	<classpathentry kind="lib" path="/Railo-Libs/sun-security-jaas-1-2-4.jar"/>
-	<classpathentry kind="lib" path="/Railo-Libs/sun-xml-jaxrpc-1-2-1.jar"/>
-	<classpathentry kind="lib" path="/Railo-Libs/sun-xml-saaj-1-2-1.jar"/>
-	<classpathentry kind="lib" path="/Railo-Libs/sun-xml-wsdl4j-1-5-1.jar"/>
-	<classpathentry kind="lib" path="/Railo-Libs/tagsoup-1-2-1.jar"/>
-	<classpathentry kind="lib" path="/Railo-Libs/w3c-dom-1-1-0.jar"/>
-	<classpathentry kind="lib" path="/Railo-Libs/xdb-1-0-0.jar"/>
-	<classpathentry kind="lib" path="/Railo-Libs/xml-apis-1-3-2.jar"/>
-	<classpathentry kind="lib" path="/Railo-Libs/xmlbeans-2-3-0-r540734.jar"/>
-	<classpathentry kind="lib" path="/Railo-Libs/xmlparserv2-1-2-2.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
