--- a/build.xml
+++ b/build.xml
@@ -4,26 +4,21 @@
         Build Hibernate Extension
     </description>
     <!-- set global properties for this build -->
-  <property name="bundlename" value="hibernate.extension"/>
-  <property name="bundleversion" value="1.0.0."/>
+  <property file="build.properties"/>
+
   
-  <property name="railoLoader" location="/Users/mic/Projects/Railo/Source2/railo/railo-java/railo-loader/bin"/>
   <property name="lib" location="source/java/libs"/>
   <property name="temp" location="temp"/>
   <property name="build" location="build"/>
   <property name="dist"  location="dist"/>
   <property name="src" location="source/java/src"/>
-  <property name="railoLib" location="/Users/mic/Projects/Railo/Source2/railo/railo-java/libs"/>
+  <property name="srcImg" location="source/images"/>
   
   <buildnumber file="build.number"/>
   
 
   <path id="classpath">
-    <pathelement location="${railoLoader}" />
     <fileset dir="${lib}">
-      <include name="**/*.jar" />
-    </fileset>
-    <fileset dir="${railoLib}">
       <include name="**/*.jar" />
     </fileset>
   </path>
@@ -59,13 +54,14 @@
 
     <echo file="${dist}/extension/META-INF/MANIFEST.MF">Manifest-Version: 1.0
 Built-Date: ${NOW}
-version: "1.0"
+version: "${bundleversion}${build.number}"
 id: "FAD1E8CB-4F45-4184-86359145767C29DE"
-name: "Hibernate ORM Engine"
-railo-core-version: "5.0.0.018"
+name: ${label}
+description: ${description}
 start-bundles: false
-orm: "[{'class':'org.opencfmlfoundation.extension.orm.hibernate.HibernateORMEngine','name':'${bundlename}','version':'${bundleversion}${build.number}'}]"
+orm: "[{'class':'${class}','name':'${bundlename}','version':'${bundleversion}${build.number}'}]"
 </echo>
+
 
 
   </target>
@@ -75,7 +71,7 @@ orm: "[{'class':'org.opencfmlfoundation.extension.orm.hibernate.HibernateORMEngi
   <target name="compile" depends="copy"
         description="compile the source " >
     <!-- Compile ACF-Infinspan source -->
-    <javac srcdir="${temp}" target="1.6" destdir="${build}" debug="true" debuglevel="lines,vars,source">
+    <javac srcdir="${temp}" target="1.7" destdir="${build}" debug="true" debuglevel="lines,vars,source">
       <classpath refid="classpath" />
     </javac>
   </target>
@@ -102,11 +98,20 @@ orm: "[{'class':'org.opencfmlfoundation.extension.orm.hibernate.HibernateORMEngi
       <fileset dir="${lib}">
         <include name="**/*.jar"/>
         <exclude name="**/javax.servlet.jar"/>
+        <exclude name="**/lucee.jar"/>
+        <exclude name="**/org-apache-felix-main-*.jar"/>
+
+      </fileset>
+    </copy>
+    <!-- copy the logo -->
+    <copy todir="${dist}/extension/META-INF">
+      <fileset dir="${srcImg}/">
+        <include name="logo.png"/>
       </fileset>
     </copy>
 
     <!-- Zip everything  -->
-     <zip destfile="${dist}/rasia-hibernate.re">
+     <zip destfile="${dist}/hibernate-orm-${bundleversion}${build.number}.lex">
         <zipfileset dir="${dist}/extension"/>
     </zip>
 		
@@ -114,8 +119,9 @@ orm: "[{'class':'org.opencfmlfoundation.extension.orm.hibernate.HibernateORMEngi
 
 	<target name="clean"  depends="dist" description="clean up" >
 		<!-- Delete the ${build} and ${dist} directory trees -->
-		<delete dir="${build}"/>
-		<delete dir="${temp}"/>
+		<delete dir="${dist}/extension"/>
+    <delete dir="${build}"/>
+    <delete dir="${temp}"/>
 	</target>
 
 </project>
