--- a/source/java/.classpath
+++ b/source/java/.classpath
@@ -12,6 +12,6 @@
 	<classpathentry kind="lib" path="libs/slf4j-nop-1-6-4.jar"/>
 	<classpathentry kind="lib" path="libs/ehcache-2-5-2.jar"/>
 	<classpathentry kind="lib" path="libs/org-apache-felix-main-4-2-1.jar"/>
-	<classpathentry combineaccessrules="false" kind="src" path="/Lucee Loader"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/loader"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
