--- a/source/java/.classpath
+++ b/source/java/.classpath
@@ -4,7 +4,6 @@
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="lib" path="libs/antlr-2-7-6.jar"/>
 	<classpathentry kind="lib" path="libs/dom4j-1-6-1.jar"/>
-	<classpathentry kind="lib" path="libs/hibernate-3-5-5.jar"/>
 	<classpathentry kind="lib" path="libs/javassist-3-9-0.jar"/>
 	<classpathentry kind="lib" path="libs/javax.servlet.jar"/>
 	<classpathentry kind="lib" path="libs/jta-1-1-0.jar"/>
@@ -12,6 +11,8 @@
 	<classpathentry kind="lib" path="libs/slf4j-nop-1-6-4.jar"/>
 	<classpathentry kind="lib" path="libs/ehcache-2-5-2.jar"/>
 	<classpathentry kind="lib" path="libs/org-apache-felix-main-4-2-1.jar"/>
+	<classpathentry kind="lib" path="libs/hibernate-3-5-5-0001L.jar"/>
+	<classpathentry kind="lib" path="libs/org-apache-commons-collections-3-2-1.jar"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/loader"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
