--- a/source/java/.classpath
+++ b/source/java/.classpath
@@ -6,14 +6,12 @@
 	<classpathentry kind="lib" path="libs/dom4j-1-6-1.jar"/>
 	<classpathentry kind="lib" path="libs/javassist-3-9-0.jar"/>
 	<classpathentry kind="lib" path="libs/javax.servlet.jar"/>
-	<classpathentry kind="lib" path="libs/jta-1-1-0.jar"/>
-	<classpathentry kind="lib" path="libs/slf4j-api-1-6-4.jar"/>
-	<classpathentry kind="lib" path="libs/slf4j-nop-1-6-4.jar"/>
-	<classpathentry kind="lib" path="libs/ehcache-2-5-2.jar"/>
 	<classpathentry kind="lib" path="libs/org-apache-felix-main-4-2-1.jar"/>
 	<classpathentry kind="lib" path="libs/org-apache-commons-collections-3-2-1.jar"/>
-	<classpathentry combineaccessrules="false" kind="src" path="/loader"/>
 	<classpathentry kind="lib" path="libs/org.lucee.xml-1.0.0.0.jar"/>
 	<classpathentry kind="lib" path="libs/hibernate-3-5-5-0002L.jar"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/loader"/>
+	<classpathentry kind="lib" path="libs/lucee.jar"/>
+	<classpathentry kind="lib" path="libs/ehcache-2-5-2-0001L.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
