--- a/build.properties
+++ b/build.properties
@@ -1,7 +1,7 @@
 bundlename: hibernate.extension
 bundleversion:1.0.0.
-id: FAD1E8CB-4F45-4184-86359145767C29DE
-label: Hibernate ORM Engine
+id: CC18BB47-E06E-E426-8D5E19C4E573943A
+label: Hibernate ORM Engine 4
 description: Hibernate ORM (Hibernate in short) is an object-relational mapping library for the Java language,
  providing a framework for mapping an object-oriented domain model to a traditional relational database. 
  Hibernate solves object-relational impedance mismatch problems by replacing direct persistence-related 
