--- a/source/java/.classpath
+++ b/source/java/.classpath
@@ -2,16 +2,23 @@
 <classpath>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
-	<classpathentry kind="lib" path="libs/antlr-2-7-6.jar"/>
-	<classpathentry kind="lib" path="libs/dom4j-1-6-1.jar"/>
-	<classpathentry kind="lib" path="libs/javassist-3-9-0.jar"/>
 	<classpathentry kind="lib" path="libs/javax.servlet.jar"/>
 	<classpathentry kind="lib" path="libs/org-apache-felix-main-4-2-1.jar"/>
-	<classpathentry kind="lib" path="libs/org-apache-commons-collections-3-2-1.jar"/>
-	<classpathentry kind="lib" path="libs/org.lucee.xml-1.0.0.0.jar"/>
-	<classpathentry kind="lib" path="libs/hibernate-3-5-5-0002L.jar"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/loader"/>
+	<classpathentry kind="lib" path="libs/org.lucee.xml-1.0.0.0.jar"/>
+	<classpathentry kind="lib" path="libs/antlr-2.7.7.jar"/>
+	<classpathentry kind="lib" path="libs/hibernate-jpa-2.1-api-1.0.0.Final.jar"/>
+	<classpathentry kind="lib" path="libs/javassist-3.18.1-GA.jar"/>
+	<classpathentry kind="lib" path="libs/hibernate-core-4.3.11.Final.jar"/>
+	<classpathentry kind="lib" path="libs/jboss-logging-3.1.3.GA.jar"/>
+	<classpathentry kind="lib" path="libs/ehcache-2-5-2.jar"/>
+	<classpathentry kind="lib" path="libs/dom4j-1.6.1.jar"/>
 	<classpathentry kind="lib" path="libs/lucee.jar"/>
-	<classpathentry kind="lib" path="libs/ehcache-2-5-2-0001L.jar"/>
+	<classpathentry kind="lib" path="libs/jandex-1.1.0.jar"/>
+	<classpathentry kind="lib" path="libs/jboss-logging-annotations-1.2.0.jar"/>
+	<classpathentry kind="lib" path="libs/slf4j-api-1-6-4.jar"/>
+	<classpathentry kind="lib" path="libs/slf4j-nop-1-6-4.jar"/>
+	<classpathentry kind="lib" path="libs/jboss-transaction-1-2-0.jar"/>
+	<classpathentry kind="lib" path="libs/jta-1.1.0.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
