--- a/build.xml
+++ b/build.xml
@@ -60,8 +60,9 @@ id: "FAD1E8CB-4F45-4184-86359145767C29DE"
 name: ${label}
 description: ${description}
 start-bundles: true
+release-type: ${releaseType}
 orm: "[{'class':'${class}','name':'${bundlename}','version':'${bundleversion}${build.number}'}]"
-lucee-core-version: "5.0.0.48"
+lucee-core-version: "${luceeCoreVersion}"
 </echo>
 
 
