--- a/build.properties
+++ b/build.properties
@@ -1,6 +1,8 @@
 bundlename: hibernate.extension
 bundleversion:3.5.5.
 id: FAD1E8CB-4F45-4184-86359145767C29DE
+luceeCoreVersion: 5.0.0.157
+releaseType: server
 label: Hibernate ORM Engine
 description: Hibernate ORM (Hibernate in short) is an object-relational mapping library for the Java language,
  providing a framework for mapping an object-oriented domain model to a traditional relational database. 
