--- a/build.xml
+++ b/build.xml
@@ -102,6 +102,8 @@ lucee-core-version: "${luceeCoreVersion}"
         <exclude name="**/javax.servlet.jar"/>
         <exclude name="**/lucee.jar"/>
         <exclude name="**/org-apache-felix-main-*.jar"/>
+        <exclude name="**/ehcache-*.jar"/>
+        <exclude name="**/xml-apis-*.jar"/>
 
       </fileset>
     </copy>
