--- a/build.properties
+++ b/build.properties
@@ -1,6 +1,8 @@
 bundlename: hibernate.extension
 bundleversion:4.3.11.
-id: CC18BB47-E06E-E426-8D5E19C4E573943A
+versionappendix:-BETA
+id: FAD1E8CB-4F45-4184-86359145767C29DE
+luceeCoreVersion: 5.0.0.190
 label: Hibernate ORM Engine 4
 releaseType: server
 description: Hibernate ORM (Hibernate in short) is an object-relational mapping library for the Java language,
