--- a/source/java/.classpath
+++ b/source/java/.classpath
@@ -5,7 +5,6 @@
 	<classpathentry kind="lib" path="libs/javax.servlet.jar"/>
 	<classpathentry kind="lib" path="libs/org-apache-felix-main-4-2-1.jar"/>
 	<classpathentry kind="lib" path="libs/org.lucee.xml-1.0.0.0.jar"/>
-	<classpathentry kind="lib" path="libs/antlr-2.7.7.jar"/>
 	<classpathentry kind="lib" path="libs/hibernate-jpa-2.1-api-1.0.0.Final.jar"/>
 	<classpathentry kind="lib" path="libs/javassist-3.18.1-GA.jar"/>
 	<classpathentry kind="lib" path="libs/hibernate-core-4.3.11.Final.jar"/>
@@ -16,8 +15,11 @@
 	<classpathentry kind="lib" path="libs/jandex-1.1.0.jar"/>
 	<classpathentry kind="lib" path="libs/jboss-logging-annotations-1.2.0.jar"/>
 	<classpathentry kind="lib" path="libs/jboss-transaction-1-2-0.jar"/>
-	<classpathentry kind="lib" path="libs/xml-apis-1.4.1.jar"/>
 	<classpathentry kind="lib" path="libs/org.lucee.jta-1.1.0.jar"/>
 	<classpathentry kind="lib" path="libs/slf4j-api-1-7-12.jar"/>
+	<classpathentry kind="lib" path="libs/com.fasterxml.classmate-1.3.0.jar"/>
+	<classpathentry kind="lib" path="libs/hibernate-commons-annotations-4.0.5.Final.jar"/>
+	<classpathentry kind="lib" path="libs/xml-apis-1.4.1.jar"/>
+	<classpathentry kind="lib" path="libs/antlr-2.7.7.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
