LDEV-2959 - redo the session handling completely, so session and connections are not handled separately

--- a/build.xml
+++ b/build.xml
@@ -74,7 +74,7 @@ lucee-core-version: "${luceeCoreVersion}"
   <target name="compile" depends="copy"
         description="compile the source " >
     <!-- Compile ACF-Infinspan source -->
-    <javac srcdir="${temp}" target="1.7" destdir="${build}" debug="true" debuglevel="lines,vars,source">
+    <javac srcdir="${temp}" destdir="${build}" debug="true" debuglevel="lines,vars,source">
       <classpath refid="classpath" />
     </javac>
   </target>
