--- a/source/java/.classpath
+++ b/source/java/.classpath
@@ -1,7 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
 	<classpathentry kind="src" path="src"/>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER">
+		<attributes>
+			<attribute name="module" value="true"/>
+		</attributes>
+	</classpathentry>
 	<classpathentry kind="lib" path="libs/javax.servlet.jar"/>
 	<classpathentry kind="lib" path="libs/org-apache-felix-main-4-2-1.jar"/>
 	<classpathentry kind="lib" path="libs/org-apache-commons-collections-3-2-1.jar"/>
@@ -13,6 +17,7 @@
 	<classpathentry kind="lib" path="libs/jta-1.1.0.jar"/>
 	<classpathentry kind="lib" path="libs/xml-apis-1.4.1.jar"/>
 	<classpathentry kind="lib" path="libs/ehcache-2.10.3.jar"/>
-	<classpathentry kind="lib" path="libs/hibernate-3.5.5.0007L.jar"/>
+	<classpathentry kind="lib" path="libs/hibernate-5.4.27.Final.jar"/>
+	<classpathentry kind="lib" path="libs/persistence-api-2.2.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
