update hibernate version to 5.4

--- a/build.properties
+++ b/build.properties
@@ -1,6 +1,6 @@
 bundlename: hibernate.extension
-bundleversion:3.5.5.
-versionAppendix: -SNAPSHOT
+bundleversion:5.4.29.
+versionAppendix: -BETA
 id: FAD1E8CB-4F45-4184-86359145767C29DE
 luceeCoreVersion: 5.0.0.157
 releaseType: server
