--- a/source/java/.classpath
+++ b/source/java/.classpath
@@ -9,15 +9,21 @@
 	<classpathentry kind="lib" path="libs/javax.servlet.jar"/>
 	<classpathentry kind="lib" path="libs/org-apache-felix-main-4-2-1.jar"/>
 	<classpathentry kind="lib" path="libs/org-apache-commons-collections-3-2-1.jar"/>
-	<classpathentry combineaccessrules="false" kind="src" path="/loader"/>
-	<classpathentry kind="lib" path="libs/lucee.jar"/>
 	<classpathentry kind="lib" path="libs/antlr-2.7.6.jar"/>
 	<classpathentry kind="lib" path="libs/dom4j-1.6.1.jar"/>
 	<classpathentry kind="lib" path="libs/javassist-3.9.0.GA.jar"/>
 	<classpathentry kind="lib" path="libs/jta-1.1.0.jar"/>
 	<classpathentry kind="lib" path="libs/xml-apis-1.4.1.jar"/>
-	<classpathentry kind="lib" path="libs/ehcache-2.10.3.jar"/>
-	<classpathentry kind="lib" path="libs/hibernate-5.4.27.Final.jar"/>
-	<classpathentry kind="lib" path="libs/persistence-api-2.2.jar"/>
+	<classpathentry kind="lib" path="libs/lucee.jar"/>
+	<classpathentry kind="lib" path="libs/com.fasterxml.classmate-1.5.1.jar"/>
+	<classpathentry kind="lib" path="libs/javassist-3.9.0.GA copy.jar"/>
+	<classpathentry kind="lib" path="libs/hibernate-5.4.29.Final.jar"/>
+	<classpathentry kind="lib" path="libs/hibernate-annotations-5.1.2.Final.jar"/>
+	<classpathentry kind="lib" path="libs/net.bytebuddy.byte-buddy-1.10.21.jar"/>
+	<classpathentry kind="lib" path="libs/javax.persistence-api-2.2.jar"/>
+	<classpathentry kind="lib" path="libs/org.jboss.jandex-2.2.3.Final.jar"/>
+	<classpathentry kind="lib" path="libs/org.jboss.logging.jboss-logging-3.4.1.Final.jar"/>
+	<classpathentry kind="lib" path="libs/ehcache-2.10.6.jar"/>
+	<classpathentry kind="lib" path="libs/hibernate-ehcache-5.4.29.Final.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
