--- a/source/java/.classpath
+++ b/source/java/.classpath
@@ -28,6 +28,7 @@
 	<classpathentry kind="lib" path="libs/hibernate-5.4.29.1.jar"/>
 	<classpathentry kind="lib" path="libs/jakarta.xml.bind-api-2.3.3.jar"/>
 	<classpathentry kind="lib" path="libs/jaxb-runtime-2.3.4.jar"/>
+	<classpathentry kind="lib" path="libs/jaxb-api-2.3.1.jar"/>
 	<classpathentry kind="lib" path="libs/org.lucee.txw2-2011.8.9.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
