--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -52,3 +52,9 @@ jobs:
         extensionDir: ${{ github.workspace }}/dist
       env:
         testLabels: orm
+    - name: Publish Test Results
+      uses: EnricoMi/publish-unit-test-result-action@v1
+      if: always()
+      with:
+        files: ${{ github.workspace }}/lucee/test/reports/junit-test-results.xml
+        check_name: "Test Results"
