--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,12 +3,14 @@
 
 name: Java CI
 
-on: [push, pull_request]
+on: [push, pull_request,workflow_dispatch]
 
 jobs:
   build:
 
     runs-on: ubuntu-latest
+    env:
+      luceeVersion: 6.0.0.95-SNAPSHOT
 
     steps:
     - uses: actions/checkout@v2
@@ -17,10 +19,42 @@ jobs:
       with:
         java-version: '11'
         distribution: 'adopt'
+    - name: Cache Maven packages
+      uses: actions/cache@v2
+      with:
+        path: ~/.m2
+        key: lucee-script-runner-maven-cache
+    - name: Cache Lucee files
+      uses: actions/cache@v2
+      with:
+        path: _actions/zspitzer/lucee-script-engine-runner/main/lucee-download-cache
+        key: lucee-downloads-${{ env.luceeVersion }}
+        restore-keys: |
+          lucee-downloads
     - name: Build with Ant
       run: ant -noinput -verbose -buildfile build.xml
-    - name: Save extension as build Artifact
+    - name: Upload Artifact
       uses: actions/upload-artifact@v2
       with:
-        name: hibernate-extension
-        path: dist/*.lex 
+        name: hibernate-lex
+        path: dist/*.lex
+    - name: Checkout Lucee
+      uses: actions/checkout@v2
+      with:
+        repository: lucee/lucee
+        path: lucee
+    - name: Run Lucee Test Suite
+      uses: zspitzer/lucee-script-engine-runner@main
+      with:
+        webroot: ${{ github.workspace }}/lucee/test
+        execute: /bootstrap-tests.cfm
+        luceeVersion: ${{ env.luceeVersion }}
+        extensionDir: ${{ github.workspace }}/dist
+      env:
+        testLabels: orm
+    - name: Publish Test Results
+      uses: EnricoMi/publish-unit-test-result-action@v1
+      if: always()
+      with:
+        files: ${{ github.workspace }}/lucee/test/reports/junit-test-results.xml
+        check_name: "Test Results"
