--- a/build.properties
+++ b/build.properties
@@ -2,7 +2,7 @@ bundlename: hibernate.extension
 bundleversion:3.5.5.
 versionAppendix: -SNAPSHOT
 id: FAD1E8CB-4F45-4184-86359145767C29DE
-luceeCoreVersion: 5.3.9.74-SNAPSHOT
+luceeCoreVersion: 5.3.9.73
 releaseType: server
 label: Hibernate ORM Engine
 description: Hibernate ORM (Hibernate in short) is an object-relational mapping library for the Java language,
