--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,22 +10,21 @@ jobs:
 
     runs-on: ubuntu-latest
     env:
-      luceeVersion: 6.0.0.95-SNAPSHOT
-
+      luceeVersion: light-6.0.0.298-SNAPSHOT
     steps:
-    - uses: actions/checkout@v2
+    - uses: actions/checkout@v3
     - name: Set up JDK 11
-      uses: actions/setup-java@v2
+      uses: actions/setup-java@v3
       with:
         java-version: '11'
         distribution: 'adopt'
     - name: Cache Maven packages
-      uses: actions/cache@v2
+      uses: actions/cache@v3
       with:
         path: ~/.m2
         key: lucee-script-runner-maven-cache
     - name: Cache Lucee files
-      uses: actions/cache@v2
+      uses: actions/cache@v3
       with:
         path: _actions/zspitzer/lucee-script-engine-runner/main/lucee-download-cache
         key: lucee-downloads-${{ env.luceeVersion }}
@@ -34,12 +33,12 @@ jobs:
     - name: Build with Ant
       run: ant -noinput -verbose -buildfile build.xml
     - name: Upload Artifact
-      uses: actions/upload-artifact@v2
+      uses: actions/upload-artifact@v3
       with:
         name: hibernate-lex
         path: dist/*.lex
     - name: Checkout Lucee
-      uses: actions/checkout@v2
+      uses: actions/checkout@v3
       with:
         repository: lucee/lucee
         path: lucee
