--- a/pom.xml
+++ b/pom.xml
@@ -53,6 +53,27 @@
 
    <build>
       <plugins>
+
+         <!-- https://www.baeldung.com/maven-add-src-directories#add-source-directory-with-build-helper-maven-plugin -->
+         <plugin>
+            <groupId>org.codehaus.mojo</groupId>
+            <artifactId>build-helper-maven-plugin</artifactId>
+            <version>3.2.0</version>
+            <executions>
+               <execution>
+                  <id>add-source</id>
+                  <phase>generate-sources</phase>
+                  <goals>
+                        <goal>add-source</goal>
+                  </goals>
+                  <configuration>
+                     <sources>
+                        <source>${project.basedir}/source/java/src/</source>
+                     </sources>
+                  </configuration>
+               </execution>
+            </executions>
+         </plugin>
          <!-- publish to central maven
         <plugin>
           <groupId>org.sonatype.plugins</groupId>
@@ -247,14 +268,36 @@ lucee-core-version: ${lucee.version}
 
 
 
+	<dependencyManagement>
+		<dependencies>
+			<dependency>
+				<groupId>org.junit</groupId>
+				<artifactId>junit-bom</artifactId>
+				<version>5.9.2</version>
+				<type>pom</type>
+				<scope>import</scope>
+			</dependency>
+		</dependencies>
+	</dependencyManagement>
 
    <dependencies>
-<!-- 
+		<dependency>
+			<groupId>org.junit.jupiter</groupId>
+			<artifactId>junit-jupiter</artifactId>
+			<scope>test</scope>
+		</dependency>
+
       <dependency>
-         <groupId>junit</groupId>
-         <artifactId>junit</artifactId>
-         <version>4.12</version>
-      </dependency> -->
+         <groupId>org.mockito</groupId>
+         <artifactId>mockito-inline</artifactId>
+         <version>4.0.0</version>
+      </dependency>
+      <dependency>
+         <groupId>org.mockito</groupId>
+         <artifactId>mockito-junit-jupiter</artifactId>
+         <version>4.0.0</version>
+         <scope>test</scope>
+      </dependency>
 
       <!-- https://mvnrepository.com/artifact/org.lucee/lucee -->
       <dependency>
