--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -59,6 +59,7 @@ jobs:
       with:
         files: ${{ github.workspace }}/lucee/test/reports/junit-test-results.xml
         check_name: "Test Results"
+
   maven_build:
     runs-on: ubuntu-latest
 
@@ -69,5 +70,38 @@ jobs:
         with:
           java-version: '17'
           distribution: 'temurin'
+
+      - name: Cache Maven packages
+        uses: actions/cache@v3
+        with:
+          path: ~/.m2
+          key: maven-cache
+
       - name: Build with Maven
         run: mvn --batch-mode --update-snapshots package
+
+  javadocs:
+    runs-on: ubuntu-latest
+
+    steps:
+      - uses: actions/checkout@v3
+
+      - name: Set up JDK 17
+        uses: actions/setup-java@v3
+        with:
+          java-version: '17'
+          distribution: 'temurin'
+
+      - name: Cache Maven packages
+        uses: actions/cache@v3
+        with:
+          path: ~/.m2
+          key: maven-cache
+
+      - name: Build with Maven
+        run: mvn --batch-mode --update-snapshots javadoc:javadoc
+
+      - name: Commit Javadocs
+        uses: stefanzweifel/git-auto-commit-action@v4
+        with:
+          commit_message: "📘 DOC: Rebuild API Javadocs"
