--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -65,10 +65,10 @@ jobs:
 
     steps:
       - uses: actions/checkout@v3
-      - name: Set up JDK 17
+      - name: Set up JDK 8
         uses: actions/setup-java@v3
         with:
-          java-version: '17'
+          java-version: '8'
           distribution: 'temurin'
 
       - name: Cache Maven packages
@@ -86,10 +86,10 @@ jobs:
     steps:
       - uses: actions/checkout@v3
 
-      - name: Set up JDK 17
+      - name: Set up JDK 8
         uses: actions/setup-java@v3
         with:
-          java-version: '17'
+          java-version: '8'
           distribution: 'temurin'
 
       - name: Cache Maven packages
@@ -98,7 +98,7 @@ jobs:
           path: ~/.m2
           key: maven-cache
 
-      - name: Build with Maven
+      - name: Generate Javadocs
         run: mvn --batch-mode --update-snapshots javadoc:javadoc
 
       - name: Commit Javadocs
