--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -78,7 +78,7 @@ jobs:
           key: maven-cache
 
       - name: Build with Maven
-        run: mvn --batch-mode --update-snapshots package
+        run: mvn --batch-mode -f pom.xml package
 
   javadocs:
     runs-on: ubuntu-latest
@@ -99,7 +99,7 @@ jobs:
           key: maven-cache
 
       - name: Generate Javadocs
-        run: mvn --batch-mode --update-snapshots javadoc:javadoc
+        run: mvn --batch-mode -f pom.xml javadoc:javadoc
 
       - name: Commit Javadocs
         uses: stefanzweifel/git-auto-commit-action@v4
