👌 IMPROVE: Update gitignore for ROOT build artifacts

--- a/.gitignore
+++ b/.gitignore
@@ -6,12 +6,15 @@
 va specific
 
 # build files/dist
-bin
-build
-dist
-temp
+/bin
+/build
+/dist
+/temp
 *.class
-target
+/target
 *.lock
 *.DS_Store
 /cache
+
+# Lucee source for CFML tests
+/lucee
