--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -85,6 +85,8 @@ jobs:
 
     steps:
       - uses: actions/checkout@v3
+        with:
+          token: ${{secrets.GH_TOKEN}}
 
       - name: Set up JDK 8
         uses: actions/setup-java@v3
@@ -104,4 +106,5 @@ jobs:
       - name: Commit Javadocs
         uses: stefanzweifel/git-auto-commit-action@v4
         with:
+
           commit_message: "📘 DOC: Rebuild API Javadocs"
