--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -64,13 +64,19 @@ jobs:
   maven_build:
     runs-on: ubuntu-latest
     if: "!contains(github.event.head_commit.message, '__CI__')"
+    strategy:
+      fail-fast: false
+      matrix:
+        lucee_version: ["5.3.10.97"]
+        java_version: [ "8", "11", "16" ]
 
     steps:
       - uses: actions/checkout@v3
-      - name: Set up JDK 8
+
+      - name: Set up JDK
         uses: actions/setup-java@v3
         with:
-          java-version: '8'
+          java-version: '${{matrix.java_version}}'
           distribution: 'temurin'
 
       - name: Cache Maven packages
@@ -80,7 +86,7 @@ jobs:
           key: maven-cache
 
       - name: Build with Maven
-        run: mvn --batch-mode -f pom.xml package
+        run: mvn --batch-mode -f pom.xml package -Dlucee.version="${{matrix.lucee_version}}" -Djdk.version="${{matrix.java_version}}"
 
   javadocs:
     runs-on: ubuntu-latest
