--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -68,7 +68,7 @@ jobs:
       fail-fast: false
       matrix:
         lucee_version: ["5.3.10.97"]
-        java_version: [ "8", "11", "16" ]
+        java_version: [ "8", "11", "17" ]
 
     steps:
       - uses: actions/checkout@v3
@@ -86,7 +86,7 @@ jobs:
           key: maven-cache
 
       - name: Build with Maven
-        run: mvn --batch-mode -f pom.xml package -Dlucee.version="${{matrix.lucee_version}}" -Djdk.version="${{matrix.java_version}}"
+        run: mvn --batch-mode -f pom.xml -Dlucee.version=${{matrix.lucee_version}} -Djdk.version=${{matrix.java_version}} -compile
 
   javadocs:
     runs-on: ubuntu-latest
