--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,7 +3,7 @@
 
 name: Java CI
 
-on: [push, pull_request,workflow_dispatch]
+on: [push, pull_request, workflow_dispatch]
 
 jobs:
   build:
@@ -116,3 +116,32 @@ jobs:
         with:
           file_pattern: "docs"
           commit_message: "📘 DOC: Rebuild API Javadocs __CI__"
+
+  format:
+    runs-on: ubuntu-latest
+    if: "!contains(github.event.head_commit.message, '__CI__')"
+    steps:
+      - uses: actions/checkout@v3
+        with:
+          token: ${{secrets.GH_TOKEN}}
+
+      - name: Set up JDK 8
+        uses: actions/setup-java@v3
+        with:
+          java-version: '8'
+          distribution: 'temurin'
+
+      - name: Cache Maven packages
+        uses: actions/cache@v3
+        with:
+          path: ~/.m2
+          key: maven-cache
+
+      - name: Format Java source code
+        run: mvn --batch-mode -f pom.xml formatter:format
+
+      - name: Commit formatting changes
+        uses: stefanzweifel/git-auto-commit-action@v4
+        with:
+          file_pattern: "docs"
+          commit_message: "🤖 CI: Auto-format Java source __CI__"
