--- a/pom.xml
+++ b/pom.xml
@@ -268,6 +268,19 @@ lucee-core-version: ${lucee.version}
                </execution>
             </executions>
          </plugin>
+
+         <plugin>
+            <groupId>net.revelc.code.formatter</groupId>
+            <artifactId>formatter-maven-plugin</artifactId>
+            <version>2.21.0</version>
+            <configuration>
+               <directories>
+                  <directory>${project.basedir}/source/java/src/</directory>
+                  <directory>${project.basedir}/src/test/java</directory>
+               </directories>
+            </configuration>
+         </plugin>
+
       </plugins>
 
    </build>
