--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,16 +15,21 @@ jobs:
 
     steps:
     - uses: actions/checkout@v3
+        with:
+          token: ${{secrets.GH_TOKEN}}
+
     - name: Set up JDK 11
       uses: actions/setup-java@v3
       with:
         java-version: '11'
-        distribution: 'adopt'
+        distribution: 'temurin'
+
     - name: Cache Maven packages
       uses: actions/cache@v3
       with:
         path: ~/.m2
         key: lucee-script-runner-maven-cache
+
     - name: Cache Lucee files
       uses: actions/cache@v3
       with:
@@ -32,18 +37,22 @@ jobs:
         key: lucee-downloads-${{ env.luceeVersion }}
         restore-keys: |
           lucee-downloads
+
     - name: Build with Ant
       run: ant -noinput -verbose -buildfile build.xml
+
     - name: Upload Artifact
       uses: actions/upload-artifact@v3
       with:
         name: hibernate-lex
         path: dist/*.lex
+
     - name: Checkout Lucee
       uses: actions/checkout@v3
       with:
         repository: lucee/lucee
         path: lucee
+
     - name: Run Lucee Test Suite (testLabels="orm")
       uses: lucee/script-runner@main
       with:
@@ -54,6 +63,7 @@ jobs:
       env:
         testLabels: orm
         testAdditional: ${{ github.workspace }}/tests
+
     - name: Publish Test Results
       uses: EnricoMi/publish-unit-test-result-action@v1
       if: always()
@@ -119,10 +129,10 @@ jobs:
         with:
           token: ${{secrets.GH_TOKEN}}
 
-      - name: Set up JDK 8
+      - name: Set up JDK 11
         uses: actions/setup-java@v3
         with:
-          java-version: '8'
+          java-version: '11'
           distribution: 'temurin'
 
       - name: Cache Maven packages
