🐛 FIX: Correct javadocs path for picking up new apidocs for upload

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -121,7 +121,7 @@ jobs:
           AWS_S3_BUCKET: ${{ secrets.AWS_APIDOCS_BUCKET }}
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_ACCESS_SECRET }}
-          SOURCE_DIR: ".tmp/apidocs"
+          SOURCE_DIR: "docs"
           DEST_DIR: "lucee/hibernate-extension/"
 
   format:
