--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,8 +15,8 @@ jobs:
 
     steps:
     - uses: actions/checkout@v3
-      with:
-        token: ${{secrets.GH_TOKEN}}
+      #with:
+      #  token: ${{secrets.GH_TOKEN}}
 
     - name: Set up JDK 11
       uses: actions/setup-java@v3
