🤖 CI: Switch javadocs to upload to S3
🐛 FIX: Correct AWS secret key names for javadocs upload

🐛 FIX: Correct javadocs path for picking up new apidocs for upload

🤖 CI: Drop GH token for main build

🤖 CI: Add versioning to javadocs artifact upload

--- a/build.xml
+++ b/build.xml
@@ -41,6 +41,10 @@
     <mkdir dir="${dist}/extension/jars"/>
   </target>
 
+  <!-- Output the project version for use in versioning S3 artifact uploads -->
+  <target name="version">
+    <echo>${bundleversion}${build.number}${versionAppendix}</echo>
+  </target>
 
   <target name="copy" depends="init" description="copy source file to temp" >
     <!-- copy the source -->
