--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,8 +15,6 @@ jobs:
 
     steps:
     - uses: actions/checkout@v3
-      with:
-        token: ${{secrets.GH_TOKEN}}
 
     - name: Set up JDK 11
       uses: actions/setup-java@v3
@@ -97,8 +95,6 @@ jobs:
     if: "!contains(github.event.head_commit.message, '__CI__')"
     steps:
       - uses: actions/checkout@v3
-        with:
-          token: ${{secrets.GH_TOKEN}}
 
       - name: Set up JDK 8
         uses: actions/setup-java@v3
@@ -115,13 +111,23 @@ jobs:
       - name: Generate Javadocs
         run: mvn --batch-mode -f pom.xml javadoc:javadoc
 
-      ## TODO: Publish apidocs to S3
+      - name: Get Project Version for Javadocs Versioning
+        id: current_version
+        # For Maven builds (future)
+        # run: echo "VERSION=`mvn help:evaluate -Dexpression=project.version -q -DforceStdout`" >> $GITHUB_ENV
+        # For Ant builds (still the default)
+        run: echo "VERSION=`ant -silent -quiet version`" >> $GITHUB_ENV
 
-      # - name: Commit Javadocs
-      #   uses: stefanzweifel/git-auto-commit-action@v4
-      #   with:
-      #     file_pattern: "docs"
-      #     commit_message: "📘 DOC: Rebuild API Javadocs __CI__"
+      - name: Upload API Docs to S3
+        uses: jakejarvis/s3-sync-action@master
+        with:
+          args: --acl public-read
+        env:
+          AWS_S3_BUCKET: ${{ secrets.AWS_APIDOCS_BUCKET }}
+          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY }}
+          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_ACCESS_SECRET }}
+          SOURCE_DIR: "docs"
+          DEST_DIR: "lucee/hibernate-extension/${{ env.VERSION }}/"
 
   format:
     runs-on: ubuntu-latest
